--- a/DataScience and AI ML/Data Collection and Storage/Api_Learn/API Data Collection and Analysis/.github/workflows/python_weather_update.yml
+++ b/DataScience and AI ML/Data Collection and Storage/Api_Learn/API Data Collection and Analysis/.github/workflows/python_weather_update.yml
@@ -1,8 +1,8 @@
 name: Update Weather Data
 on:
   schedule:
-    # Runs every 2 hours
-    - cron: '0 */2 * * *'
+    # Runs every 30 minutes
+    - cron: '*/30 * * * *'
 
 jobs:
   update:
