--- a/.github/workflows/python_weather_update.yml
+++ b/.github/workflows/python_weather_update.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com" # spell-checker: disable-line
           git add weather_data.csv
           git commit -m "Update weather data"
           git push
